fix(ui): mobile view, burger menu, button spacing

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -14,6 +14,10 @@
     src: local('Inter');
 }
 
+*, *::before, *::after {
+    box-sizing: border-box;
+}
+
 @font-face {
     font-family: 'Inter';
     font-style: normal;
